<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <EditTextPreference
            android:title="@string/player1_text"
            android:summary="@string/player1_text"
            android:key="@string/preference_player1_key"
            android:defaultValue="@string/player1_text"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="8"
        />
        <EditTextPreference
            android:title="@string/player2_text"
            android:summary="@string/player2_text"
            android:key="@string/preference_player2_key"
            android:defaultValue="@string/player2_text"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="8"
        />
        <CheckBoxPreference
            android:title="@string/play_bot_text"
            android:summary="@string/pref_computer_summary"
            android:defaultValue="false"
            android:key="@string/preference_bot"
            />
</PreferenceScreen>